--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "duckdb>=1.4.3",
+    "matplotlib>=3.10.8",
     "openpyxl>=3.1.5",
     "pandas>=2.3.3",
+    "polars>=1.36.1",
+    "pyarrow>=22.0.0",
     "sqlalchemy>=2.0.45",
 ]
